--- a/apps/frontend-repo/package.json
+++ b/apps/frontend-repo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-repo",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
+    "@repo/ui": "*",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
@@ -17,15 +18,18 @@
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "next": "15.1.6",
+    "react-redux": "^9.1.2"
+  },
+  "peerDependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "@types/react": "^18",
+    "@types/react-dom": "^18"
+
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.1.6",
     "prettier": "^3.3.1",
