--- a/apps/backend-repo/package.json
+++ b/apps/backend-repo/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "compile": "NODE_LISTEN=true node -r @swc-node/register ./core/app.ts",
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "dev": "../../node_modules/nodemon/bin/nodemon.js -e ts  --exec \"npm run compile\"",
     "start": "firebase emulators:start --only functions"
   },
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.21",
     "globals": "^15.4.0",
     "nodemon": "^3.1.3",
+    "tsc-alias": "^1.8.10",
     "typescript": "^5.4.5"
   },
   "dependencies": {
