--- a/apps/frontend-repo/package.json
+++ b/apps/frontend-repo/package.json
@@ -18,18 +18,15 @@
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "next": "15.1.6",
+    "react": "^19",
+    "react-dom": "^19",
     "react-redux": "^9.1.2"
-  },
-  "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "@types/react": "^18",
-    "@types/react-dom": "^18"
-
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "15.1.6",
     "prettier": "^3.3.1",
