--- a/apps/frontend-repo/.env.example
+++ b/apps/frontend-repo/.env.example
@@ -1,6 +1,5 @@
 
-# Please fill with given value
-NEXT_PUBLIC_BASE_APP_URL=
+NEXT_PUBLIC_BASE_APP_URL=http://localhost:3000
 
 NEXT_PUBLIC_FIREBASE_API_KEY=
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
@@ -10,4 +9,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_FIREBASE_APP_ID=
 
-BASE_API_URL=
+BASE_API_URL=http://127.0.0.1:5001/your-firebase-project/asia-southeast1/webApi
